syntax = "proto3";

package smartagriculture;

import "google/protobuf/empty.proto";

message SensorData {
  float temperature = 1;
  float humidity = 2;
  float lightIntensity = 3;
}

service SensorService {
  rpc getLatestSensorData(google.protobuf.Empty) returns (SensorData);
}
