syntax = "proto3";

package smartagriculture;

service DataAnalysisService {
  rpc analyzeSensorData(SensorData) returns (SensorAnalysis);
}

message SensorData {
  float temperature = 1;
  float humidity = 2;
  float lightIntensity = 3;
}

message SensorAnalysis {
  string analysisResult = 1;
}
